2009-10-05  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        REGRESSION (r47440): Inserting text in the middle of content in a scrolled textfield results in painting bugs
        <rdar://problem/7269108>
        https://bugs.webkit.org/show_bug.cgi?id=29982

        Test: fast/repaint/line-in-scrolled-clipped-block.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock): Use the unclipped overflow rect
        (including layout overflow) for the repaint rect calculation.

2009-10-05  Drew Wilson  <atwilson@google.com>

        Reviewed by David Levin.

        Chromium wants to turn off SharedWorkers at runtime
        https://bugs.webkit.org/show_bug.cgi?id=29757

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::sharedWorker):
        Now returns jsUndefined if isAvailable() returns false, to allow SharedWorkers to be disabled at runtime.
        * workers/DefaultSharedWorkerRepository.cpp:
        (WebCore::SharedWorkerRepository::isAvailable):
        Made SharedWorkers available by default.
        * workers/SharedWorkerRepository.h:
        Added definition for SharedWorkerRepository::isAvailable().

2009-10-05  Hironori Bono  <hbono@chromium.org>

        Reviewed by Eric Seidel.

        A super quick fix for Bug 28710.

        https://bugs.webkit.org/show_bug.cgi?id=28710

        This change just resets the style sent to addStyleMarkup() to avoid an assertion error
        and creates an empty style when computedStyleAtPosition is 0 to avoid a crash.
        (This change is nothing but a better-than-crash change.)

        Tests: editing/selection/select-crash-001.html
               editing/selection/select-crash-002.html

        * editing/ApplyStyleCommand.cpp:
        (WebCore::editingStyleAtPosition): Resets the style sent to addStyleMarkup() if it is not valid.
        * editing/markup.cpp: